[gd_scene load_steps=88 format=3 uid="uid://d1t5b2cch3vgs"]

[ext_resource type="Script" uid="uid://csj4f0jjnnqbm" path="res://scripts/player.gd" id="1_4flbx"]
[ext_resource type="Script" uid="uid://ds7r61x3ysn72" path="res://scripts/camera_2d.gd" id="2_onrkg"]
[ext_resource type="Texture2D" uid="uid://cgim7hyw5ljbn" path="res://assets/player/Dash.png" id="3_dw050"]
[ext_resource type="Texture2D" uid="uid://dipuqv51kk0yq" path="res://assets/tiles/Idle.png" id="3_i3pqv"]
[ext_resource type="Texture2D" uid="uid://b82mg0lpm87ae" path="res://assets/player/Attack 1.png" id="3_nvl01"]
[ext_resource type="Texture2D" uid="uid://dhx66mur37ifa" path="res://assets/player/Death.png" id="4_b26j0"]
[ext_resource type="Texture2D" uid="uid://mtjonw4m3bwi" path="res://assets/player/Fall.png" id="5_n7ghd"]
[ext_resource type="Texture2D" uid="uid://bv0ttuxx7y0a1" path="res://assets/player/Hurt.png" id="6_nvl01"]
[ext_resource type="Texture2D" uid="uid://bftpqmjnnbphi" path="res://assets/player/Jump.png" id="8_b26j0"]
[ext_resource type="Texture2D" uid="uid://heyqfkgq7klw" path="res://assets/player/Run.png" id="8_ivps1"]
[ext_resource type="Texture2D" uid="uid://d1c8mn4t3k0ew" path="res://assets/tiles/wall_slide.png" id="10_n7ghd"]
[ext_resource type="AudioStream" uid="uid://cjancfngm8m3w" path="res://audio/sfx/Player-jump.mp3" id="11_jump"]
[ext_resource type="AudioStream" uid="uid://c7mcww33racxe" path="res://audio/sfx/Player-dash.mp3" id="12_dash"]
[ext_resource type="AudioStream" uid="uid://btet2huxn5v3d" path="res://audio/sfx/Dimention-swap.mp3" id="13_swap"]
[ext_resource type="Script" uid="uid://sjb86a2fuqwq" path="res://scripts/dimension_overlay.gd" id="14_dimoverlay"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqtel"]
size = Vector2(10, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_xg1a7"]
atlas = ExtResource("3_nvl01")
region = Rect2(0, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_ob4mi"]
atlas = ExtResource("3_nvl01")
region = Rect2(144, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_ax26h"]
atlas = ExtResource("3_nvl01")
region = Rect2(288, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_kh4g0"]
atlas = ExtResource("3_nvl01")
region = Rect2(432, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgmjd"]
atlas = ExtResource("3_nvl01")
region = Rect2(576, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_va2xi"]
atlas = ExtResource("3_nvl01")
region = Rect2(720, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkf2u"]
atlas = ExtResource("3_nvl01")
region = Rect2(864, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7jk6"]
atlas = ExtResource("3_nvl01")
region = Rect2(1008, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_feeoa"]
atlas = ExtResource("3_nvl01")
region = Rect2(1152, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6nxt"]
atlas = ExtResource("3_nvl01")
region = Rect2(1296, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_urp6f"]
atlas = ExtResource("3_dw050")
region = Rect2(0, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwjto"]
atlas = ExtResource("3_dw050")
region = Rect2(144, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_606se"]
atlas = ExtResource("3_dw050")
region = Rect2(288, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1c27"]
atlas = ExtResource("3_dw050")
region = Rect2(432, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_op7ga"]
atlas = ExtResource("3_dw050")
region = Rect2(576, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_q13i1"]
atlas = ExtResource("3_dw050")
region = Rect2(720, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_pylmc"]
atlas = ExtResource("3_dw050")
region = Rect2(864, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbfsw"]
atlas = ExtResource("3_dw050")
region = Rect2(1008, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tmop"]
atlas = ExtResource("3_dw050")
region = Rect2(1152, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ahtn"]
atlas = ExtResource("3_dw050")
region = Rect2(1296, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lmhl"]
atlas = ExtResource("3_dw050")
region = Rect2(1440, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_dx0e4"]
atlas = ExtResource("3_dw050")
region = Rect2(1584, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm5j8"]
atlas = ExtResource("4_b26j0")
region = Rect2(0, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hik5"]
atlas = ExtResource("4_b26j0")
region = Rect2(144, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtqh7"]
atlas = ExtResource("4_b26j0")
region = Rect2(288, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wuci"]
atlas = ExtResource("4_b26j0")
region = Rect2(432, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_iruf7"]
atlas = ExtResource("4_b26j0")
region = Rect2(576, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5n4i"]
atlas = ExtResource("4_b26j0")
region = Rect2(720, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_634y6"]
atlas = ExtResource("4_b26j0")
region = Rect2(864, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_efrwb"]
atlas = ExtResource("4_b26j0")
region = Rect2(1008, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_hiqhm"]
atlas = ExtResource("4_b26j0")
region = Rect2(1152, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkwlq"]
atlas = ExtResource("4_b26j0")
region = Rect2(1296, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl5qd"]
atlas = ExtResource("4_b26j0")
region = Rect2(1440, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_ek41f"]
atlas = ExtResource("4_b26j0")
region = Rect2(1584, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_khis8"]
atlas = ExtResource("4_b26j0")
region = Rect2(1728, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_b88wv"]
atlas = ExtResource("4_b26j0")
region = Rect2(1872, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgbbb"]
atlas = ExtResource("4_b26j0")
region = Rect2(2016, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_331ug"]
atlas = ExtResource("4_b26j0")
region = Rect2(2160, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_ny14h"]
atlas = ExtResource("4_b26j0")
region = Rect2(2304, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibah8"]
atlas = ExtResource("4_b26j0")
region = Rect2(2448, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_3iwfv"]
atlas = ExtResource("5_n7ghd")
region = Rect2(0, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwsg1"]
atlas = ExtResource("5_n7ghd")
region = Rect2(144, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xqrm"]
atlas = ExtResource("5_n7ghd")
region = Rect2(288, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfour"]
atlas = ExtResource("5_n7ghd")
region = Rect2(432, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gr2b"]
atlas = ExtResource("6_nvl01")
region = Rect2(0, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_vl8ci"]
atlas = ExtResource("6_nvl01")
region = Rect2(144, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieltc"]
atlas = ExtResource("6_nvl01")
region = Rect2(288, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = ExtResource("3_i3pqv")
region = Rect2(0, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs0m"]
atlas = ExtResource("3_i3pqv")
region = Rect2(144, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jxqw"]
atlas = ExtResource("3_i3pqv")
region = Rect2(288, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw050"]
atlas = ExtResource("3_i3pqv")
region = Rect2(432, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_b26j0"]
atlas = ExtResource("3_i3pqv")
region = Rect2(576, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ghd"]
atlas = ExtResource("3_i3pqv")
region = Rect2(720, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvl01"]
atlas = ExtResource("3_i3pqv")
region = Rect2(864, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivps1"]
atlas = ExtResource("8_b26j0")
region = Rect2(0, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygbnx"]
atlas = ExtResource("8_b26j0")
region = Rect2(144, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2t6f"]
atlas = ExtResource("8_b26j0")
region = Rect2(288, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3lcn"]
atlas = ExtResource("8_b26j0")
region = Rect2(432, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_fddr8"]
atlas = ExtResource("8_ivps1")
region = Rect2(0, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_oybyf"]
atlas = ExtResource("8_ivps1")
region = Rect2(144, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajfva"]
atlas = ExtResource("8_ivps1")
region = Rect2(288, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ef02"]
atlas = ExtResource("8_ivps1")
region = Rect2(432, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfmca"]
atlas = ExtResource("8_ivps1")
region = Rect2(576, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_76oay"]
atlas = ExtResource("8_ivps1")
region = Rect2(720, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4uyv"]
atlas = ExtResource("8_ivps1")
region = Rect2(864, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_tw8ou"]
atlas = ExtResource("8_ivps1")
region = Rect2(1008, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_xry5e"]
atlas = ExtResource("10_n7ghd")
region = Rect2(0, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6w8y"]
atlas = ExtResource("10_n7ghd")
region = Rect2(144, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_yem3p"]
atlas = ExtResource("10_n7ghd")
region = Rect2(288, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_86rna"]
atlas = ExtResource("10_n7ghd")
region = Rect2(432, 0, 144, 144)

[sub_resource type="SpriteFrames" id="SpriteFrames_ivps1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xg1a7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ob4mi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax26h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kh4g0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgmjd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_va2xi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkf2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7jk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_feeoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6nxt")
}],
"loop": true,
"name": &"attack",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_urp6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwjto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_606se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1c27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op7ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q13i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pylmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbfsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tmop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ahtn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lmhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dx0e4")
}],
"loop": true,
"name": &"dash",
"speed": 17.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm5j8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hik5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtqh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wuci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iruf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5n4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_634y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efrwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hiqhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkwlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl5qd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek41f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khis8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b88wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgbbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_331ug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ny14h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibah8")
}],
"loop": false,
"name": &"death",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3iwfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwsg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xqrm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfour")
}],
"loop": true,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gr2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vl8ci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ieltc")
}],
"loop": true,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jxqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw050")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b26j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ghd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvl01")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivps1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygbnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2t6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3lcn")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fddr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oybyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajfva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ef02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfmca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76oay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4uyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tw8ou")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xry5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6w8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yem3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86rna")
}],
"loop": true,
"name": &"wall_slide",
"speed": 10.0
}]

[node name="Player" type="CharacterBody2D"]
z_index = 10
script = ExtResource("1_4flbx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5, -6.5)
shape = SubResource("RectangleShape2D_hqtel")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3.5, 3.5)
position_smoothing_enabled = true
script = ExtResource("2_onrkg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(5.000001, -6.000001)
scale = Vector2(0.7013889, 0.7013889)
sprite_frames = SubResource("SpriteFrames_ivps1")
animation = &"attack"

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_jump")
bus = "SFX"

[node name="DashSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_dash")
bus = "SFX"

[node name="DimensionSwapSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_swap")
bus = "SFX"

[node name="DimensionOverlay" type="CanvasLayer" parent="."]
layer = 50
script = ExtResource("14_dimoverlay")

[node name="ColorRect" type="ColorRect" parent="DimensionOverlay"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2000.0
offset_top = -2000.0
offset_right = 2000.0
offset_bottom = 2000.0
mouse_filter = 2
color = Color(1, 0.98, 0.85, 0.12)

[node name="FadeCanvas" type="CanvasLayer" parent="."]
layer = 100
visible = false

[node name="FadeRect" type="ColorRect" parent="FadeCanvas"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2000.0
offset_top = -2000.0
offset_right = 2000.0
offset_bottom = 2000.0
color = Color(0, 0, 0, 1)
